update: add: reject registration for companies; fix: allow registration
